...
        
        [barrageView startAnimation];
    };
}
- (void)addbutton{
    UIButton *start = [[UIButton alloc]initWithFrame:CGRectMake(0, 500, 100, 50)];
    [start setTitle:@"start" forState:UIControlStateNormal];
    [start addTarget:self action:@selector(start) forControlEvents:UIControlEventTouchUpInside];
    [start setTitleColor:[UIColor blackColor] forState:UIControlStateNormal];
    [self.view addSubview:start];
    
    UIButton *stop = [[UIButton alloc]initWithFrame:CGRectMake(110, 500, 100, 50)];
    [stop setTitle:@"stop" forState:UIControlStateNormal];
    [stop addTarget:self action:@selector(stop) forControlEvents:UIControlEventTouchUpInside];
    [stop setTitleColor:[UIColor blackColor] forState:UIControlStateNormal];
    [self.view addSubview:stop];
    UIButton *append = [[UIButton alloc]initWithFrame:CGRectMake(210, 500, 100, 50)];
    [append setTitleColor:[UIColor blackColor] forState:UIControlStateNormal];
    [append setTitle:@"append" forState:UIControlStateNormal];
...
